src/test/deca/context/valid/created/return-null.deca
class A{
	
}
class B{
	A fonction(){
		return null;
	}
}