src/test/deca/context/invalid/created/void3.deca
class A{
	void fonction(){
		return;
	}
}